# ROS

./: .gitignore  action_server_node_test.sh  module1_auto_test.sh
install/: local_setup.sh  setup.sh
install/second_coursework/include/second_coursework/second_coursework/action/: robot_behavior.h  robot_behavior.hpp
install/second_coursework/include/second_coursework/second_coursework/action/detail/: robot_behavior__builder.hpp  robot_behavior__functions.c  robot_behavior__functions.h  robot_behavior__struct.h  robot_behavior__struct.hpp  robot_behavior__type_support.c  robot_behavior__type_support.cpp  robot_behavior__type_support.hpp
install/second_coursework/include/second_coursework/second_coursework/msg/: emergency_msg.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/second_coursework/include/second_coursework/second_coursework/msg/detail/: emergency_msg__builder.hpp  emergency_msg__functions.c  emergency_msg__rosidl_typesupport_fastrtps_c.h  emergency_msg__rosidl_typesupport_fastrtps_cpp.hpp  emergency_msg__type_support.h  emergency_msg__type_support.hpp
log/: latest_build
src/second_coursework/: CMakeLists.txt
src/second_coursework/action/: FindEntities.action
src/second_coursework/include/action_server/: action_server.hpp  feedback_manager.hpp
src/second_coursework/msg/: EmergencyMsg.msg
src/second_coursework/scripts/: smach_node.py  yolo.py
src/second_coursework/src/: main.cpp
src/second_coursework/src/action_server/: action_server.cpp  feedback_manager.cpp
src/second_coursework/src/emergency_subscriber/: emergency_subscriber.cpp
src/second_coursework/src/find_entities_server/: find_entities_server.cpp
src/second_coursework/yolo/: yolo_detection  yolo_detection.cpp
